# bankSystem

./: exit
BankSystemClientLogic/: BankSystemClientLogic.sln
BankSystemClientLogic/BankSystemClientLogic/: BankSystemClientLogic.cpp  BankSystemClientLogic.vcxproj  BankSystemClientLogic.vcxproj.filters  user.ini
BankSystemServer/: BankSystemServer.sln  CMakeLists.txt
BankSystemServer/BankSystemServer/: Bank.db  BankSystemServer.cpp  BankSystemServer.vcxproj  BankSystemServer.vcxproj.filters
BankSystemServer/BankSystemServer/x64/Debug/: BankSystemServer.exe.recipe  BankSystemServer.ilk  BankSystemServer.vcxproj.FileListAbsolute.txt  banksystemserver.new.obj.enc  banksystemserver.obj.enc  vc143.idb
BankSystemServer/BankSystemServer/x64/Debug/BankSystemServer.tlog/: BankSystemServer.lastbuildstate  BankSystemServer.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bankSystem/: authorization.cpp  authorization.h  bankSystem.pro  charttextitem.cpp  charttextitem.h  connection.cpp  connection.h  graphic.cpp  graphic.h  histogram.cpp  histogram.h  main.cpp  main_menu.cpp  main_menu.h  main_widget.cpp  main_widget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  registration.cpp  registration.h
build-bankSystem-Desktop_Qt_6_6_1_shared_MinGW_w64_MINGW64_MSYS2_fe344f-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h  user.ini
build-bankSystem-Desktop_Qt_6_6_1_shared_MinGW_w64_MINGW64_MSYS2_fe344f-Debug/debug/: moc_authorization.cpp  moc_main_menu.cpp  (+4 more)
(+12 files in other folders)
